[package]
name = "rln"
version = "0.1.0"
authors = ["Onur Kılıç <kiliconu@itu.edu.tr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sapling_multicore"]
wasm = ["sapling_wasm"]
bellman_wasm = ["bellman/wasm", "bellman/nolog"]
sapling_wasm = ["sapling-crypto/wasm"]
sapling_multicore = ["sapling-crypto/multicore"]

[dependencies]
rand = "0.4"
blake2 = "0.8.1"
sapling-crypto = { package = "sapling-crypto_ce", version = "0.1.3", default-features = false }
bellman = { package = "bellman_ce", version = "0.3.4", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"
